# opentitus

./: .gitignore  CMakeLists.txt  Changelog.txt  Makefile.dingux  Makefile.linux  README.md  opentitus.c  readme.txt  titus.conf  titus_moktar.conf
doc/: another manual.txt  audio.txt  compiling_dingux.txt  compiling_linux.txt  compiling_win32.txt  links.txt  manual_amiga.txt  readme_dingux.txt  readme_linux.txt  readme_win32.txt
include/: backbuffer.h  common.h  config.h  draw.h  elevators.h  enemies.h  gates.h  globals.h  level.h  malloc.h  objects.h  original.h  player.h  reset.h  scroll.h  settings.h  sprites.h  sqz.h  tituserror.h
opl/: Makefile.vita  make_dingux.sh  opl_readme.txt
src/: audio.c  common.c  draw.c  elevators.c  enemies.c  engine.c  fonts.c  gates.c  keyboard.c  level.c  menu.c  objects.c  original.c  player.c  reset.c  scroll.c  settings.c  sprites.c  tile_animation.c  viewimage.c
vita/: titus_vita.conf  vita_titus.conf
